using System;
using System.Collections.Generic;
using System.Linq;
using System.Threading.Tasks;
using UnityEngine;

public class Constants
{
    public const string ANIM_RUNFW = "runfw";
    public const string ANIM_IDLE = "idle";
    public const string ANIM_RUNBW = "runbw";
    public const string ANIM_ATTACKIDLE = "attackidle";
    public const string ANIM_ATTACKRUN = "attackrun";
    public const string ANIM_DEAD = "die";
    public const string ANIM_WALKFW = "walkfw";
    public const string ANIM_ATTACKRANGER = "attackranger";
    public const string ANIM_ATTACKMELEE = "attackmelee";
    public const string TAG_PLAYER = "Player";
    public const string TAG_ENEMY = "Enemy";
    public const string TAG_PLAYERZONE = "PlayerZone";
    public const string TAG_CAMPCHARACTER = "CampCharacter";
    public const string TAG_CAMPCHARACTERHIT = "CampCharacterHit";
    public const string MUSIC_THEME = "Theme";
    public const string SFX_SHOOT = "Shoot";
    public const string SFX_OPENUI_1 = "OpenUI_1";
    public const string SFX_OPENUI_2 = "OpenUI_2";
    public const string SFX_CLOSEUI = "CloseUI";
    public const string SFX_SWORDSLASH = "SwordSlash";
    public const string SFX_SCIMMERSLASH_1 = "ScimmerSlash_1";
    public const string SFX_SCIMMERSLASH_2 = "ScimmerSlash_2";
    public const string SFX_PLAYERDEAD = "PlayerDead";
    public const string SFX_COINDROP = "CoinDrop";
    public const string SFX_COINFLYTOPLAYER = "CoinFlyToPlayer";
    public const string SFX_STONETOWERATTACK = "StoneTowerAttack";
    public const string SFX_LIGHTINGTOWERATTACK = "LightingTowerAttack";
    public const string SFX_ARROWTOWERATTACK = "ArrowTowerAttack";
    public const string SFX_FIRETOWERATTACK = "FireTowerAttack";
    public const string SFX_LIGHTINGBULLET = "LightingBullet";
    public const string SFX_DRAGONBREATH = "DragonBreath";
    public const string SFX_DRAGONFLY = "DragonFly";
    public const string SFX_WEREWOLVESATTACK_1 = "WerewolvesAttack_1";
    public const string SFX_WEREWOLVESATTACK_2 = "WerewolvesAttack_2";
    public const string SFX_WEREWOLVESDEAD = "WerewolvesDead";
    public const string SFX_THANHCATTUHANDEAD = "ThanhCatTuHanDead";
    public const string SFX_FIXHOUSE = "FixHouse";
    public const string SFX_UPTRAP = "UpTrap";
    public const float Distance_Zero = 0.01f;
    public const string DATA_PLAYERDATA = "PlayerData";
    public const string DATA_CAMPCHARACTERDATA = "CampCharacterData";
    public const string DATA_MAPDATA = "MapData";
    public const string DATA_TOWERDATA = "TowerData";
    public const string DATA_DAILYREWARDDATA = "DailyRewardData";
    public const string DATA_DAILYREWARDCOINDATA = "DailyRewardCoinData";
    public const string DATA_DAILYREWARDBUCKDATA = "DailyRewardBuckData";
}
